--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,6 @@
 
 # Executables
 *.exe
-*.out
 *.app
 *.i*86
 *.x86_64
@@ -50,3 +49,7 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+
+
+.vscode
